--- a/WcgWebOne/src/main/resources/templates/html/test.html
+++ b/WcgWebOne/src/main/resources/templates/html/test.html
@@ -1,11 +1,10 @@
-<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
-	<head>
-	<meta charset="UTF-8">
-	<title>my test page</title>
-	<link rel="stylesheet" type="text/css" href="../../static/css/test.css">
-	</head>
-	<body>
-		<p>line0</p>
-		<p>line1</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+</body>
 </html>
